--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ button {
     background-position: top;
     /* object-fit: contain; */
     background-color:var(--pale-blue);
-    padding: 7rem 1.75rem;
+    padding: 0 1.75rem;
 }
 
 .ordersummary {
